fixed some errors

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           <div class="row">
               <div class="col-lg-4">
                   <div class="counter-text">
-                      <span>Time Left For Bsides Algiers Qualifications</span>
-                      <h3>Count Every Second <br />Until the Event</h3>
+                      <span>Time left for Bsides Algiers Qualifications</span>
+                      <h3>Count every second <br />until the event</h3>
                   </div>
               </div>
               <div class="col-lg-8">
@@ -324,7 +324,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>High National School of Computer Science <br>BPM68 16270, Oued Smar, Algiers, Algeria</address>
+              <address>Higher National School of Computer Science <br>BPM68 16270, Oued Smar, Algiers, Algeria</address>
             </div>
           </div>
 
@@ -410,7 +410,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        &copy; Copyright <strong>Shellmates Club</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
