Hafidz modification + Speakers + Schedule

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1606911103/bsides_site/LOGOTRANSPARENT_jjchhp.png" rel="icon">
-  <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1606911103/bsides_site/LOGOTRANSPARENT_jjchhp.png" rel="apple-touch-icon">
+  <link href="img/S_bSides.png" rel="icon">
+  <link href="img/S_bSides_Background.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -53,9 +53,9 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <!-- <li><a href="#speakers">Speakers</a></li>
+          <li><a href="#speakers">Speakers</a></li>
           <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#venue">Venue</a></li> -->
+          <!-- <li><a href="#venue">Venue</a></li> -->
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -113,7 +113,7 @@
               <div class="col-lg-4">
                   <div class="counter-text">
                       <span>Time left for Bsides Algiers Qualifications</span>
-                      <h3>Count every second <br />until the event</h3>
+                      <h3>Count Every Second <br />Until The Event</h3>
                   </div>
               </div>
               <div class="col-lg-8">
@@ -140,7 +140,158 @@
       </div>
   </section>
 
-  
+  <!--==========================
+      Speakers Section
+    ============================-->
+    <section id="speakers" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Event Speakers</h2>
+          <p>We are honored to have with us</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/9.jpg" alt="Speaker 1" class="img-fluid">
+              <div class="details">
+                <h3>Zellag Mohamed Lamine</h3>
+                <p>Senior network Security Engineer<br />at Algérie Télécom</p>
+                <div class="social">
+                  <a href="https://twitter.com/laminezellag?s=21"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/zellaglamine/"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/zellag-mohamed-lamine-1ba15319"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/7.jpg" alt="Speaker 2" class="img-fluid">
+              <div class="details">
+                <h3>Hamza Tahmi</h3>
+                <p>Senior Security Engineer at Citrix</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/WhyYouAreVisitingMyProfile"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/hamza-tahmi"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!--==========================
+      Schedule Section
+    ============================-->
+    <section id="schedule" class="section-with-bg">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h2>Event Schedule</h2>
+          <p>Here is our event schedule</p>
+        </div>
+
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
+          </li>
+        </ul>
+
+        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
+          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+
+        <div class="tab-content row justify-content-center">
+
+          <!-- Schdule Day 1 -->
+          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <h4>Opening Ceremony</h4>
+                <ul>
+                  <li>Presentation of the club and event (plus an overview on the BSides Algiers's history).</li>
+                  <li>A word from the president of the club, an experienced CTF player.</li>
+                  <li>Rules of the CTF, and announcement of the competition's start.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>10:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/Flag.jpg" alt="Flag">
+                </div>
+                <h4>The Beginning of the CTF Competition</h4>
+                <p>Launch of the CTF (Participants will be directed to the CTF plateform to start the challenges).</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>08:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/9.jpg" alt="Zellag Mohamed Lamine">
+                </div>
+                <h4>Conference: Secure SD-WAN Secure Connectivity Needs with Everyone Working from Home. <span>Zellag Mohamed Lamine</span></h4>
+                <p>Security talk by a senior network security engineer at Algérie Télécom.</p>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 1 -->
+
+          <!-- Schdule Day 2 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>05:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/7.jpg" alt="Hamza Tahmi">
+                </div>
+                <h4>Workshop: Vulnerability Research with CodeQL <span>Hamza Tahmi</span></h4>
+                <p>Partical workshop lead by a senior security engineer at Citrix.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>08:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/Flag.jpg" alt="Flag">
+                </div>
+                <h4>The Ending of the CTF Competition </h4>
+                  <p>The CTF plateform will close and participants will wait to the final result to be announced.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <h4>Closing Ceremony</h4>
+                <ul>
+                  <li>Summery of the event.</li>
+                  <li>A word from our sponsors Realistic Security.</li>
+                  <li>Announcement of winners and teams qualified for BSides finals.</li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 2 -->
+        </div>
+
+      </div>
+
+    </section>
 
     <!--==========================
       Gallery Section
@@ -180,18 +331,24 @@
 
         <div class="row no-gutters supporters-wrap clearfix">
 
-          <div class="col-lg-3 col-md-2 col-xs-6">
+          <div class="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606911040/bsides_site/supporters/1_c4iai0.png" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606911042/bsides_site/supporters/2_fmlc5o.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="img/ESI.png" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -388,7 +545,7 @@
           <div class="col-12 footer-contact">
             <h4 class="section-header">Follow Us</h4>
             <p>
-              High National School of Computer Science <br>
+              Higher National School of Computer Science <br>
               BPM68 16270, Oued Smar, Algiers<br>
               Algeria <br>
               <strong>Email:</strong> shellmates@esi.dz<br>
