Fix image references

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/S_bSides.png" rel="icon">
-  <link href="img/S_bSides_Background.jpg" rel="apple-touch-icon">
+  <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620788/bsides_site/S_bSides_egrpq4.png" rel="icon">
+  <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620787/bsides_site/S_bSides_Background_hcahlq.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -154,7 +154,7 @@
           <div class="col-lg-2"></div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/9.jpg" alt="Speaker 1" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620804/bsides_site/speakers/9_c9awpn.png" alt="Speaker 1" class="img-fluid">
               <div class="details">
                 <h3>Zellag Mohamed Lamine</h3>
                 <p>Senior network Security Engineer<br />at Algérie Télécom</p>
@@ -168,7 +168,7 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/7.jpg" alt="Speaker 2" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620802/bsides_site/speakers/7_kokmyq.png" alt="Speaker 2" class="img-fluid">
               <div class="details">
                 <h3>Hamza Tahmi</h3>
                 <p>Senior Security Engineer at Citrix</p>
@@ -203,9 +203,6 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
-
         <div class="tab-content row justify-content-center">
 
           <!-- Schdule Day 1 -->
@@ -227,7 +224,7 @@
               <div class="col-md-2"><time>10:00 AM UTC+1</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/Flag.jpg" alt="Flag">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620787/bsides_site/Flag_xxm0d0.jpg" alt="Flag">
                 </div>
                 <h4>The Beginning of the CTF Competition</h4>
                 <p>Launch of the CTF (Participants will be directed to the CTF plateform to start the challenges).</p>
@@ -238,7 +235,7 @@
               <div class="col-md-2"><time>08:00 PM UTC+1</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/9.jpg" alt="Zellag Mohamed Lamine">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620804/bsides_site/speakers/9_c9awpn.png" alt="Zellag Mohamed Lamine">
                 </div>
                 <h4>Conference: Secure SD-WAN Secure Connectivity Needs with Everyone Working from Home. <span>Zellag Mohamed Lamine</span></h4>
                 <p>Security talk by a senior network security engineer at Algérie Télécom.</p>
@@ -255,7 +252,7 @@
               <div class="col-md-2"><time>05:00 PM UTC+1</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/7.jpg" alt="Hamza Tahmi">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620802/bsides_site/speakers/7_kokmyq.png" alt="Hamza Tahmi">
                 </div>
                 <h4>Workshop: Vulnerability Research with CodeQL <span>Hamza Tahmi</span></h4>
                 <p>Partical workshop lead by a senior security engineer at Citrix.</p>
@@ -266,7 +263,7 @@
               <div class="col-md-2"><time>08:00 PM UTC+1</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/Flag.jpg" alt="Flag">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620787/bsides_site/Flag_xxm0d0.jpg" alt="Flag">
                 </div>
                 <h4>The Ending of the CTF Competition </h4>
                   <p>The CTF plateform will close and participants will wait to the final result to be announced.</p>
@@ -348,7 +345,7 @@
 
           <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="img/ESI.png" class="img-fluid" alt="">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620793/bsides_site/ESI_r2mnbe.png" class="img-fluid" alt="">
             </div>
           </div>
 
