add ctf platform, change og img

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <title>The Annual Bsides Algiers Competition</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Bsides Algiers Quals Competition Shellmates Ctf" name="keywords">
+  <meta content="Bsides Algiers Competition Official Website" name="description">
+  <meta property="og:image" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607884827/bsides_site/img_q5bdco.jpg" />
 
   <!-- Favicons -->
   <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620788/bsides_site/S_bSides_egrpq4.png" rel="icon">
@@ -97,7 +98,7 @@
             <p>Friday and Saturday <br>December 18-19th, 2020</p>
           </div>
           <div class="col-lg-6">
-            <a href="#" class="about-btn scrollto">Participate To Competition</a>
+            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto">Participate To Competition</a>
           </div>
         </div>
       </div>
