--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8">
@@ -98,7 +98,7 @@
             <p>Friday and Saturday <br>December 18-19th, 2020</p>
           </div>
           <div class="col-lg-6">
-            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto">Participate To Competition</a>
+            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto" target="_blank">Participate To Competition</a>
           </div>
         </div>
       </div>
