Phrase sara + blank target

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>Friday and Saturday <br>December 18-19th, 2020</p>
           </div>
           <div class="col-lg-6">
-            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto" target="_blank">Participate To Competition</a>
+            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto" target="_blank">Participate in the Competition</a>
           </div>
         </div>
       </div>
@@ -203,6 +203,8 @@
             <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
           </li>
         </ul>
+
+        <h3 class="sub-heading">The opening and closing ceremony as well as the conference will take place on Shellmates’ facebook page. The workshop link will be provided via mail to those who registered.Participants will be informed if there are any changes to the schedule.</h3>
 
         <div class="tab-content row justify-content-center">
 
