omit blank target

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>Friday and Saturday <br>December 18-19th, 2020</p>
           </div>
           <div class="col-lg-6">
-            <a href="#" class="about-btn scrollto" target="_blank">Participate in the Competition</a>
+            <a href="#" class="about-btn scrollto">Participate in the Competition</a>
           </div>
         </div>
       </div>
