--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta content="Bsides Algiers Quals Competition Shellmates Ctf" name="keywords">
   <meta content="Bsides Algiers Competition Official Website" name="description">
   <meta property="og:image" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://bsidesalgiers.com/" />
+  <meta property="og:title" content="Bsides Event" />
+  <meta property="og:description" content="Bsides Quals Competition" />
 
   <!-- Favicons -->
   <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620788/bsides_site/S_bSides_egrpq4.png" rel="icon">
