--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta property="og:image" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bsidesalgiers.com/" />
-  <meta property="og:title" content="Bsides Event" />
-  <meta property="og:description" content="Bsides Quals Competition" />
+  <meta property=”og:image:width” content=”180″ />
+  <meta property=”og:image:height” content=”110″ />
 
   <!-- Favicons -->
   <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620788/bsides_site/S_bSides_egrpq4.png" rel="icon">
