--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <meta content="Bsides Algiers Quals Competition Shellmates Ctf" name="keywords">
   <meta content="Bsides Algiers Competition Official Website" name="description">
   <meta property="og:image:secure_url" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://bsidesalgiers.com/" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property=”og:image:width” content=”1200″ />
   <meta property=”og:image:height” content=”627″ />
+  <meta property="og:image:alt" content="Bsides Logo" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://bsidesalgiers.com/" />
+  <meta property="og:title" content="The Annual BSides Algiers Competition" />
+  <meta property="og:description" content="Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas." />
 
   <!-- Favicons -->
   <link href="https://res.cloudinary.com/shellmates-club/image/upload/v1607620788/bsides_site/S_bSides_egrpq4.png" rel="icon">
