--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>The Annual BSides Algiers Competition</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Bsides Algiers Quals Competition Shellmates Ctf" name="keywords">
+  <meta content="Bsides, Algiers, Quals, Competition, Shellmates, Ctf" name="keywords">
   <meta content="Bsides Algiers Competition Official Website" name="description">
   <meta property="og:image:secure_url" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
