--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="Bsides Algiers Competition Official Website" name="description">
   <meta property="og:image:secure_url" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property=”og:image:width” content=”1200″ />
-  <meta property=”og:image:height” content=”627″ />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="315" />
   <meta property="og:image:alt" content="Bsides Logo" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bsidesalgiers.com/" />
