Add CTF platform link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p>Friday and Saturday <br>December 18-19th, 2020</p>
           </div>
           <div class="col-lg-6">
-            <a href="#" class="about-btn scrollto">Participate in the Competition</a>
+            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto">Participate in the Competition</a>
           </div>
         </div>
       </div>
