--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div class="col-lg-4">
                   <div class="counter-text">
                       <span>Time left for BSides Algiers Qualifications</span>
-                      <h3>Count Every Second <br />Until The Event</h3>
+                      <h3>Count Every Second <br />Until The End of the Ctf Quals</h3>
                   </div>
               </div>
               <div class="col-lg-8">
