--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Annual BSides Algiers Competition</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Bsides, Algiers, Quals, Competition, Shellmates, Ctf" name="keywords">
-  <meta content="Bsides Algiers Competition Official Website" name="description">
+  <meta content="Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas." name="description">
   <meta property="og:image" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="600" />
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="Title-hero">About The Event</h2>
-            <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas. After successful editions, Security BSides Algiers is back! Organized by Shellmates, the event will take place in two phases, the Qualifications will be held in December 2020 which will include a CTF competition exclusively online and the Finals in March 2021 and will include a CTF competition and conferences presented by local and international experts. The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
+            <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas. After successful editions, Security BSides Algiers is back! Organized by Shellmates, the event will take place in two phases, the Qualifications will be held in December 2020 which will include a CTF competition exclusively online, a conference and a workshop, the Finals in March 2021 and will include a CTF competition and conferences presented by local and international experts. The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
           </div>
           <div class="col-lg-3">
             <h3 class="Title-hero">Where</h3>
