--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       Counter Section
     ============================-->
 
-    <section id="counter" class=" bg-gradient">
+    <!-- <section id="counter" class=" bg-gradient">
       <div class="container">
           <div class="row">
               <div class="col-lg-4">
@@ -147,7 +147,7 @@
               </div>
           </div>
       </div>
-  </section>
+  </section> -->
 
   <!--==========================
       Speakers Section
