--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">The Annual<br><span>BSides Algiers</span> Competition</h1>
       <p class="mb-4 pb-0">18-19 December, Fully Online</p>
+      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+        data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
     </div>
   </section>
