Setting Main info and about section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">The Annual<br><span>BSides Algiers</span> Competition</h1>
-      <p class="mb-4 pb-0">18-19 December, Fully Online</p>
+      <p class="mb-4 pb-0">08-09 January, Higher National School of Computer Science, Algiers</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
@@ -97,15 +97,15 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="Title-hero">About The Event</h2>
-            <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas. After successful editions, Security BSides Algiers is back! Organized by Shellmates, the event will take place in two phases, the Qualifications will be held in December 2020 which will include a CTF competition exclusively online, a conference and a workshop, the Finals in March 2021 and will include a CTF competition and conferences presented by local and international experts. The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
+            <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas. Organized by Shellmates, the event took place in a first online Qualification phase on march 2020. The Finals which will take part 8-9 January 2022, onsite at ESI Algiers ( Higher National School of Computer Science ) Oued Smar, will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cyber security. The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
           </div>
           <div class="col-lg-3">
             <h3 class="Title-hero">Where</h3>
-            <p>Qualifications Round will fully be Online</p>
+            <p>Higher National School of Computer Science, Algiers</p>
           </div>
           <div class="col-lg-3">
             <h3 class="Title-hero">When</h3>
-            <p>Friday and Saturday <br>December 18-19th, 2020</p>
+            <p>Saturday and Sunday<br>January 08-09th, 2022</p>
           </div>
           <div class="col-lg-6">
             <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto" target="_blank">Participate in the Competition</a>
