--- a/index.html
+++ b/index.html
@@ -562,11 +562,11 @@
             </p>
 
             <div class="social-links">
-              <a href="https://mobile.twitter.com/shellmates" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="https://m.facebook.com/shellmates" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="https://instagram.com/shellmates?igshid=z75th4cophci" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="https://plus.google.com/103816118984411707627/posts" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="https://www.linkedin.com/company/shellmates-club" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://mobile.twitter.com/shellmates" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://m.facebook.com/shellmates" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a href="https://instagram.com/shellmates?igshid=z75th4cophci" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="https://plus.google.com/103816118984411707627/posts" class="google-plus" target="_blank"><i class="fa fa-google-plus"></i></a>
+              <a href="https://www.linkedin.com/company/shellmates-club" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
