add counter section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       Counter Section
     ============================-->
 
-    <!-- <section id="counter" class=" bg-gradient">
+    <section id="counter" class=" bg-gradient">
       <div class="container">
           <div class="row">
               <div class="col-lg-4">
@@ -149,7 +149,7 @@
               </div>
           </div>
       </div>
-  </section> -->
+  </section>
 
   <!--==========================
       Speakers Section
