fix about us section + delete Raleway font and replace it all with Open Sana + add futura in title

--- a/index.html
+++ b/index.html
@@ -133,20 +133,31 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <h2 class="Title-hero">About The Event</h2>
-            <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas. Organized by Shellmates, the event took place in a first online Qualification phase on march 2020. The Finals which will take part 8-9 January 2022, onsite at ESI Algiers ( Higher National School of Computer Science ) Oued Smar, will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cyber security. The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="Title-hero">Where</h3>
-            <p>Higher National School of Computer Science, Algiers</p>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="Title-hero">When</h3>
-            <p>Saturday and Sunday<br>January 08-09th, 2022</p>
-          </div>
-          <div class="col-lg-6">
-            <a href="https://ctf.bsidesalgiers.com/" class="about-btn scrollto" target="_blank">Participate in the Competition</a>
+            <br>
+            <div class="row">
+              <div class="col-xl-8 col-lg-8">
+                <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas.
+                <br>
+                <br>
+                Organized by Shellmates, the event took place in a first online Qualification phase on march 2020.
+                <br>
+                <br>
+                The Event will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cyber security.
+                <br>
+                <br>
+                The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
+              </div>
+              <div class="col-xl-4 ml-xl-0 col-lg-4">
+                <h3 class="Title-hero">Where</h3>
+                <p>Higher National School of Computer Science, Algiers</p>
+                <br>
+                <br>
+                <h3 class="Title-hero">When</h3>
+                <p>Saturday and Sunday<br>January 08-09th, 2022</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -163,7 +174,21 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-2"></div>
+          <!-- <div class="col-lg-2"></div> -->
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://cdn.discordapp.com/attachments/845301707738841108/923278211759091732/PXL_20201212_153214929.jpg" alt="Speaker 1" class="img-fluid">
+              <div class="details">
+                <h3>Zellag Mohamed Lamine</h3>
+                <p>Senior network Security Engineer<br />at Algérie Télécom</p>
+                <div class="social">
+                  <a href="https://twitter.com/laminezellag?s=21"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/zellaglamine/"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/zellag-mohamed-lamine-1ba15319"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1607620804/bsides_site/speakers/9_c9awpn.png" alt="Speaker 1" class="img-fluid">
