--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#schedule">Schedule</a></li>
+          <!-- <li><a href="#speakers">Speakers</a></li>
+          <li><a href="#schedule">Schedule</a></li> -->
           <!-- <li><a href="#venue">Venue</a></li> -->
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
@@ -79,7 +79,7 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">The Annual<br><span>BSides Algiers</span> Competition</h1>
+      <h1 class="mb-4 pb-0">The Annual<br><span>BSides Algiers</span> Event</h1>
       <p class="mb-4 pb-0">08-09 January, Higher National School of Computer Science, Algiers</p>
       <a href="https://youtu.be/HGU26HWTlqg" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
@@ -258,25 +258,29 @@
                   <a data-toggle="collapse" href="#faq2" class="collapsed">Who can register? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq2" class="collapse" data-parent="#faq-list">
                     <p>
-                      You are a fan of cybersecurity or a professional in this field? You are passionate about hacking or you are simply curious? Then BSides Algiers 2021 Quals is the opportunity not to miss to satisfy your curiosity, learn and also meet other people addicted to computer security.
+                      You are a fan of cybersecurity or a professional in this field? You are passionate about hacking or you are simply curious? Then BSides Algiers 2021 Finals is the opportunity not to miss to satisfy your curiosity, learn and also meet other people addicted to computer security.
+                      <br>
+                      The CTF finals are reserved to the teams qualified, however learning by watching is an efficient way of progress.
                     </p>
                   </div>
                 </li>
       
                 <li>
-                  <a data-toggle="collapse" href="#faq3" class="collapsed">What to expect at BSides Algiers 2021 Quals Virtual edition? <i class="fa fa-minus-circle"></i></a>
+                  <a data-toggle="collapse" href="#faq3" class="collapsed">What to expect at BSides Algiers 2021 finals onsite edition? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq3" class="collapse" data-parent="#faq-list">
                     <p>
-                      This phase includes a CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Exploitation, Web Security, Digital Forensics).
+                      This phase includes the finals of the CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Exploitation, Web Security, Digital Forensics).
+                      <br>
+                      Alongside with conferences, and exciting workshops related to cybersecurity!
                     </p>
                   </div>
                 </li>
       
                 <li>
-                  <a data-toggle="collapse" href="#faq4" class="collapsed">Why sponsor BSides Algiers 2021 Quals? <i class="fa fa-minus-circle"></i></a>
+                  <a data-toggle="collapse" href="#faq4" class="collapsed">Why sponsor BSides Algiers 2021 Finals? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq4" class="collapse" data-parent="#faq-list">
                     <p>
-                      Sponsoring Security BSides Algiers 2021 Quals event means that:
+                      Sponsoring Security BSides Algiers 2021 Finals event means that:
                     </p>
                     <ul>
                         <li>Your organization is recognized as a valuable contributor of Security BSides globally.</li>
@@ -310,7 +314,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Newsletter</h2>
-          <p>Get notified of all announcements concerning the BSides Algiers 2021 Quals</p>
+          <p>Get notified of all announcements concerning the BSides Algiers 2021 Finals</p>
         </div>
 
         <form method="POST" class="gform newsForm" action="https://script.google.com/macros/s/AKfycbxt6Aj9n9Y0Lc9heLlgRHG8D0vUPOWvJpkKKi4rg0ZOXOlQuqc/exec">
