change name of school to french

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">The Annual<br><span>BSides Algiers</span> Event</h1>
-      <p class="mb-4 pb-0">08-09 January, Higher National School of Computer Science, Algiers</p>
+      <p class="mb-4 pb-0">08-09 January, École nationale supérieure d'informatique, Algiers</p>
       <a href="https://youtu.be/HGU26HWTlqg" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
@@ -151,7 +151,7 @@
               </div>
               <div class="col-xl-4 ml-xl-0 col-lg-4">
                 <h3 class="Title-hero">Where</h3>
-                <p>Higher National School of Computer Science, Algiers</p>
+                <p>École nationale supérieure d'informatique, Algiers</p>
                 <br>
                 <br>
                 <h3 class="Title-hero">When</h3>
@@ -354,7 +354,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>Higher National School of Computer Science <br>BPM68 16270, Oued Smar, Algiers, Algeria</address>
+              <address>École nationale supérieure d'informatique <br>BPM68 16270, Oued Smar, Algiers, Algeria</address>
             </div>
           </div>
 
@@ -418,7 +418,7 @@
           <div class="col-12 footer-contact">
             <h4 class="section-header">Follow Us</h4>
             <p>
-              Higher National School of Computer Science <br>
+              École nationale supérieure d'informatique <br>
               BPM68 16270, Oued Smar, Algiers<br>
               Algeria <br>
               <strong>Email:</strong> shellmates@esi.dz<br>
