adding faq 6, finalizing registration section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,15 @@
                 </li>
       
                 <li>
+                  <a data-toggle="collapse" href="#faq6" class="collapsed">What about the CTF finals ? <i class="fa fa-minus-circle"></i></a>
+                  <div id="faq6" class="collapse" data-parent="#faq-list">
+                    <p>
+                      The CTF finals will be held in the 2nd weekend of BSides Algiers, 10 team qualified from BSides Quals and HackINI 2021 will race in a hacking battle of 24 hours, if you did not qualify, you can still watch those hackers in action !
+                    </p>
+                  </div>
+                </li>
+
+                <li>
                   <a data-toggle="collapse" href="#faq4" class="collapsed">Why sponsor BSides Algiers 2021 Finals? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq4" class="collapse" data-parent="#faq-list">
                     <p>
@@ -337,34 +346,34 @@
     </section>
 
      <!--==========================
-      Buy Ticket Section
+      Registration Section
     ============================-->
     <section id="registration" class="section-with-bg wow fadeInUp">
       <div class="container">
 
         <div class="section-header">
-          <h2>Buy Tickets</h2>
-          <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+          <h2>Registrations</h2>
+          <p>Conferences, workshops, maybe both! Just make sure to reserve your place(s) !</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Standard Access</h5>
-                <h6 class="card-price text-center">$150</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">Access Portal To</h5>
+                <h6 class="card-type text-center">Conferences</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Community Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Formal meeting</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pro-leveled speakers</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Advanced cyber security topics</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Theoretical concepts of hacking</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-toggle="modal" data-target="#registration-modal" data-ticket-type="standard-access">Buy Now</button>
+                  <a href="https://shellmates.typeform.com/bsidesconfs" target="_blank">
+                    <button type="button" class="btn">Register Now</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -372,20 +381,20 @@
           <div class="col-lg-6">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Pro Access</h5>
-                <h6 class="card-price text-center">$250</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">Access Portal To</h5>
+                <h6 class="card-type text-center">Workshops</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Community Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Interactive meetings</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Hands-on workshops</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>From beginner friendly to Advanced</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Piratical hacking concepts</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-toggle="modal" data-target="#registration-modal" data-ticket-type="pro-access">Buy Now</button>
+                  <a href="https://shellmates.typeform.com/bsidesworkshops" target="_blank">
+                    <button type="button" class="btn">Register Now</button>
+                  </a>
                 </div>
               </div>
             </div>
