fixing about content

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas.
                 <br>
                 <br>
-                Organized by Shellmates, the event took place in a first online Qualification phase on march 2020.
+                Organized by Shellmates, the event took place in a first online qualification phase on december 2020.
                 <br>
                 <br>
                 The Event will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cyber security.
