--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <a data-toggle="collapse" href="#faq6" class="collapsed">What about the CTF finals ? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq6" class="collapse" data-parent="#faq-list">
                     <p>
-                      The CTF finals will be held in the 2nd weekend of BSides Algiers, 10 team qualified from BSides Quals and HackINI 2021 will race in a hacking battle of 24 hours, if you did not qualify, you can still watch those hackers in action !
+                      The CTF finals will be held in the 2nd weekend of BSides Algiers, 10 teams qualified from BSides Quals and HackINI 2021 will race in a hacking battle of 24 hours, if you did not qualify, you can still watch those hackers in action!
                     </p>
                   </div>
                 </li>
